# salesrevv-fitness-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  test.ipynb
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: b4f3934f5a39_load_vector_extension.py
api/api/: db.py  env_settings.py  main.py
api/api/integrations/: neetocal.py
api/api/ml/: embedding.py  message.py  pipeline.py  services.py  tools.py
api/api/models/: document.py
api/api/prompts/: summarization_system.j2  tool_call_system.j2
api/api/routers/: document.py  message.py
app/: Dockerfile  main.py  pyproject.toml
app/app/: env_settings.py
corpora/: documents.json
model-service/: Dockerfile  pyproject.toml
model-service/model_service/: encoder.py  env_settings.py  main.py  models.py
scripts/: backfill.py
