[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Raz Besaleli <rbesaleli@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.32.0"
fastapi = {extras = ["standard"], version = "^0.115.4"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-sugar = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
